tests/snapshots/integration__integration_tests__help__help_merge_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - merge
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt merge - Merge worktree into target branch
Usage: [1m[36mwt merge[0m [36m[OPTIONS][0m [36m[TARGET][0m

[1m[32mArguments:[0m
  [36m[TARGET][0m
          Target branch[0m
          [0m
          Defaults to default branch.[0m

[1m[32mOptions:[0m
      [1m[36m--no-squash[0m
          Skip commit squashing

      [1m[36m--no-commit[0m
          Skip commit, squash, and rebase

      [1m[36m--no-remove[0m
          Keep worktree after merge

      [1m[36m--no-verify[0m
          Skip all project hooks

  [1m[36m-f[0m, [1m[36m--force[0m
          Skip approval prompts

      [1m[36m--stage[0m[36m [0m[36m<STAGE>[0m
          What to stage before committing [default: all]

          Possible values:
          - [1m[36mall[0m:     Stage everything: untracked files + unstaged tracked changes
          - [1m[36mtracked[0m: Stage tracked changes only (like [1mgit add -u[0m)
          - [1m[36mnone[0m:    Stage nothing, commit only what's already in the index

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Merge the current branch into the target branch and clean up. Handles the full workflow: commit uncommitted changes, squash commits, rebase, run hooks, push to target, and remove the worktree.

When already on the target branch or in the main worktree, the worktree is preserved automatically.

[32mExamples[0m

Basic merge to main:

  [2mwt merge[0m

Merge to a different branch:

  [2mwt merge develop[0m

Keep the worktree after merging:

  [2mwt merge --no-remove[0m

Preserve commit history (no squash):

  [2mwt merge --no-squash[0m

Skip git operations, only run hooks and push:

  [2mwt merge --no-commit[0m

[32mPipeline[0m

[2mwt merge[0m runs these steps:

1. [1mSquash[0m — Stages uncommitted changes, then combines all commits since target into one (like GitHub's "Squash and merge"). Use [2m--stage[0m to control what gets staged: [2mall[0m (default), [2mtracked[0m, or [2mnone[0m. A backup ref is saved to [2mrefs/wt-backup/<branch>[0m. With [2m--no-squash[0m, uncommitted changes are committed separately and individual commits are preserved.
2. [1mRebase[0m — Rebases onto target if behind. Skipped if already up-to-date. Conflicts abort immediately.
3. [1mPre-merge hooks[0m — Project commands run after rebase, before merge. Failures abort. See Hooks.
4. [1mMerge[0m — Fast-forward merge to the target branch. Non-fast-forward merges are rejected.
5. [1mCleanup[0m — Removes the worktree and branch. Use [2m--no-remove[0m to keep the worktree.
6. [1mPost-merge hooks[0m — Project commands run after cleanup. Failures are logged but don't abort.

Use [2m--no-commit[0m to skip all git operations (steps 1-2) and only run hooks and merge. Useful after preparing commits manually with [2mwt step[0m. Requires a clean working tree.

[32mSee also[0m

- wt step — Run individual merge steps (commit, squash, rebase, push)
- wt remove — Remove worktrees without merging
- wt switch — Navigate to other worktrees
