tests/snapshots/integration__integration_tests__help__help_remove_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt remove - Remove worktree and branch
Usage: [1m[36mwt remove[0m [36m[OPTIONS][0m [36m[WORKTREES]...[0m

[1m[32mArguments:[0m
  [36m[WORKTREES]...[0m
          Worktree or branch (@ for current)

[1m[32mOptions:[0m
      [1m[36m--no-delete-branch[0m
          Keep branch after removal

  [1m[36m-D[0m, [1m[36m--force-delete[0m
          Delete unmerged branches

      [1m[36m--no-background[0m
          Run removal in foreground

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Removes worktrees and their branches. Without arguments, removes the current worktree and returns to the main worktree.

[32mExamples[0m

Remove current worktree:

  [2mwt remove[0m

Remove specific worktrees:

  [2mwt remove feature-branch[0m
  [2mwt remove old-feature another-branch[0m

Keep the branch:

  [2mwt remove --no-delete-branch feature-branch[0m

Force-delete an unmerged branch:

  [2mwt remove -D experimental[0m

[32mBranch Cleanup[0m

Branches delete automatically when their content is already in the target branch (typically main). This works with squash-merge and rebase workflows where commit history differs but file changes match.

Use [2m-D[0m to force-delete unmerged branches. Use [2m--no-delete-branch[0m to keep the branch.

[32mBackground Removal[0m

Removal runs in the background by default (returns immediately). Logs are written to [2m.git/wt-logs/{branch}-remove.log[0m. Use [2m--no-background[0m to run in the foreground.

Arguments resolve by path first, then branch name—see wt switch. Shortcuts: [2m@[0m (current), [2m-[0m (previous), [2m^[0m (main worktree).

[32mSee Also[0m

- wt merge — Remove worktree after merging
- wt list — View all worktrees
