tests/snapshots/integration__integration_tests__help__help_step_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - step
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt step - Run individual workflow operations
Usage: [1m[36mwt step[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mcommit[0m       Commit changes with LLM commit message
  [1m[36msquash[0m       Squash commits down to target
  [1m[36mpush[0m         Push changes to local target branch
  [1m[36mrebase[0m       Rebase onto target
  [1m[36mpost-create[0m  Run post-create hook
  [1m[36mpost-start[0m   Run post-start hook
  [1m[36mpre-commit[0m   Run pre-commit hook
  [1m[36mpre-merge[0m    Run pre-merge hook
  [1m[36mpost-merge[0m   Run post-merge hook
  [1m[36mpre-remove[0m   Run pre-remove hook

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Run individual workflow operations: commits, squashes, rebases, pushes, and hooks.

[32mExamples[0m

Commit with LLM-generated message:

  [2mwt step commit[0m

Run pre-merge hooks in CI:

  [2mwt step pre-merge --force[0m

Manual merge workflow with review between steps:

  [2mwt step commit[0m
  [2mwt step squash[0m
  [2m# Review the squashed commit[0m
  [2mwt step rebase[0m
  [2mwt step push[0m

[32mOperations[0m

[1mGit operations:[0m

- [2mcommit[0m — Stage and commit with LLM-generated message
- [2msquash[0m — Squash all branch commits into one with LLM-generated message
- [2mrebase[0m — Rebase onto target branch
- [2mpush[0m — Push to target branch (default: main)

[1mHooks[0m — run project commands defined in `.config/wt.toml`:

- [2mpost-create[0m — After worktree creation (blocking)
- [2mpost-start[0m — After worktree creation (background)
- [2mpre-commit[0m — Before committing
- [2mpre-merge[0m — Before pushing to target
- [2mpost-merge[0m — After merge cleanup

Hooks receive context as JSON on stdin and support template variables.

[32mSee also[0m

- wt merge — Runs commit → squash → rebase → hooks → push → cleanup automatically
